updating simulator settings

--- a/web/index.html
+++ b/web/index.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="An app to have dummy accounts of users">
+  <meta name="description" content="A new Flutter application.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="dummy_account">
+  <meta name="apple-mobile-web-app-title" content="dummyaccount">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
   <link rel="shortcut icon" type="image/png" href="favicon.png"/>
 
-  <title>dummy_account</title>
+  <title>dummyaccount</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
